<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tela Client</string>
    <string name="action_clear_db">Clear DB</string>
    <string name="action_settings">Settings</string>
    <string name="action_activation">Activation</string>

    <string name="msg_enroll">Enroll</string>
    <string name="msg_verify">Verify</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_force">Force</string>
    <string name="msg_check_liveness">Check liveness</string>
    <string name="msg_initialising">Initialising SDK</string>
    <string name="msg_obtaining">Obtaining licenses</string>
    <string name="msg_ok">OK</string>
    <string name="msg_enter_user_id">Please enter user ID</string>
    <string name="msg_no_users">There are no users</string>
    <string name="msg_database">Database</string>
    <string name="msg_operation_status">Operation status: %s</string>
    <string name="msg_liveness_mode">Liveness mode</string>
    <string name="msg_liveness_custom_actions">Liveness custom actions</string>
    <string name="msg_liveness_blink_timeout">Liveness blink timeout</string>
    <string name="msg_liveness_use_separate_blink">Liveness use separate blink</string>
    <string name="msg_liveness_separate_blink_threshold">Liveness separate blink threshold</string>
    <string name="msg_liveness_separate_blink_hysteresis">Liveness separate blink hysteresis</string>
    <string name="msg_liveness_separate_blink_occlusion">Liveness separate blink occlusion</string>
    <string name="msg_check_icao_compliance">Check ICAO compliance</string>
    <string name="msg_manual_capturing">Manual capturing</string>
    <string name="msg_cancelling">Cancelling</string>
    <string name="msg_liveness_th">Liveness threshold</string>
    <string name="msg_matching_th">Matching threshold</string>
    <string name="msg_quality_th">Quality threshold</string>

    <string name="msg_enrollment_to_db_succeeded">enrollment to database succeeded</string>
    <string name="msg_enrollment_to_db_failed">enrollment to database failed</string>
    <string name="msg_verification_succeeded">verification succeeded</string>
    <string name="msg_verification_failed">verification failed: </string>

    <string name="msg_saturation_th">Saturation threshold</string>
    <string name="msg_sharpness_th">Sharpness threshold</string>
    <string name="msg_background_uniformity_th">Background uniformity threshold</string>
    <string name="msg_grayscale_density_th">Grayscale density threshold</string>
    <string name="msg_looking_away_th">Looking away threshold</string>
    <string name="msg_red_eye_th">Red eye threshold</string>
    <string name="msg_face_darkness_th">Face darkness threshold</string>
    <string name="msg_unnatural_skin_tone_th">Unnatural skin tone threshold</string>
    <string name="msg_washed_out_th">Washed out threshold</string>
    <string name="msg_pixelation_th">Pixelation threshold</string>
    <string name="msg_skin_reflection_th">Skin reflection threshold</string>
    <string name="msg_glasses_reflection_th">Glasses reflection threshold</string>
    <string name="msg_expression_th">Expression threshold</string>
    <string name="msg_dark_glasses_th">Dark glasses threshold</string>
    <string name="msg_blink_th">Blink threshold</string>
    <string name="msg_mouth_open_th">Mouth open threshold</string>

    <string name="msg_buffer_is_null">Template is null</string>
    <string name="msg_key_registered">Key registered</string>
    <string name="pref_matching">Verification settings</string>
    <string name="pref_extraction">Extraction settings</string>
    <string name="pref_liveness">Liveness settings</string>
    <string name="pref_capturing">Capturing settings</string>
    <string name="pref_icao">ICAO settings</string>

    <string name="pref_authentication_category">Authentication</string>
    <string name="pref_authentication_ip">IP address</string>
    <string name="pref_authentication_key">Authentication key</string>

    <string name="msg_no_records_in_database">No records in database</string>
    <string name="msg_enrollment_enter_id">Enter Subject ID for enrollment</string>

    <string name="msg_select_camera">Camera</string>
    <string name="msg_select_video_format">Video format</string>

    <string name="msg_add_action">Add action</string>

    <string-array name="arr_liveness_modes">
        <item>NONE</item>
        <item>PASSIVE</item>
        <item>ACTIVE</item>
        <item>PASSIVE_AND_ACTIVE</item>
        <item>SIMPLE</item>
        <item>CUSTOM</item>
    </string-array>

    <string-array name="arr_liveness_actions">
        <item>blink</item>
        <item>turnLeft</item>
        <item>turnRight</item>
        <item>turnUp</item>
        <item>turnDown</item>
        <item>turnWithTargets</item>
        <item>keepStill</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uganda_coat_of_arm_description">Uganda Coat Of Arm</string>
    <string name="min_of_educ">Ministry of Education and Sports</string>
    <string name="tela_initials">Teacher Effectiveness Learner</string>
    <string name="tela_endings">Achievement</string>
    <string name="tela_version">V 1.2.0</string>
    <string name="welcome_notice">Welcome to</string>
    <string name="tela_logo_description">Tela Logo</string>
    <string name="phone_number_label">Enter Tela school phone number</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="continue_label">Continue</string>
    <string name="support_email">Email: telauganda@gmail.com</string>
    <string name="support_phone_number">Help line: 0800 377771</string>
    <string name="updates">Updates</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in">Clock In</string>
    <string name="todo">TODO</string>
    <string name="buganda_road_school">Buganda Road School</string>
    <string name="missing">Missing</string>
    <string name="_34_89">34:89</string>
    <string name="cancel">Cancel</string>
    <string name="id_number">ID Number</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="key_image">Key Image</string>
    <string name="employee_number">Number</string>
    <string name="employee_finger">Finger Print</string>
    <string name="employee_face">Face</string>
    <string name="first_name">First Name</string>
    <string name="hint_name">John</string>
    <string name="last_name">Last Name</string>
    <string name="hint_last_name">Doe</string>
    <string name="initials">Initials</string>
    <string name="hint_mr">Mr</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_phone">077000078</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="hint_email">john@gmail.com</string>
    <string name="national_id">National Id</string>
    <string name="hint_national_id">CM0078TYH5689I</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="capture_fingerprint">Capture Fingerprint</string>
    <string name="enroll">Enroll</string>
    <string name="capture_bio_metrics">Capture Biometrics</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="initials_initials">Initials</string>
    <string name="e_mail_address_label">E-mail Address</string>
    <string name="national_id_label">National Id</string>
    <string name="gender_label">Gender</string>
    <string name="submit_changes_label">Submit Changes</string>
    <string name="teacher_code_label">Teacher code</string>
    <string name="taught_by_label">Taught By</string>
    <string name="end_time_label">End Time</string>
    <string name="start_time_label">Start Time</string>
    <string name="task_name_label">Task Name</string>
    <string name="select_class_label">Select Class</string>
    <string name="primary_label">Primary</string>
    <string name="saturday_label">Saturday</string>
    <string name="friday_label">Friday</string>
    <string name="thursday_label">Thursday</string>
    <string name="wednesday_label">Wednesday</string>
    <string name="tuesday_label">Tuesday</string>
    <string name="monday_label">Monday</string>

</resources>
