
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin">

<co.planetsystems.tela.gui.NFaceVerificationClientView
    android:id="@+id/nFaceView"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="5">
</co.planetsystems.tela.gui.NFaceVerificationClientView>

<LinearLayout
    android:id="@+id/operation_controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <Button
        android:id="@+id/button_enroll"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/msg_enroll" />

    <Button
        android:id="@+id/button_verify"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/msg_verify" />

    <Button
        android:id="@+id/button_checkLiveness"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/msg_check_liveness" />


</LinearLayout>

<LinearLayout
    android:id="@+id/other_controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/msg_cancel" />

    <Button
        android:id="@+id/button_force"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/msg_force" />
</LinearLayout>

</LinearLayout>
